syntax = "proto3";

package report;

option go_package = "github.com/mgsquare/grpc-report-generation/pb;pb";

service ReportService {
  rpc GenerateReport(GenerateReportRequest) returns (GenerateReportResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GenerateReportRequest {
  string user_id = 1;
}

message GenerateReportResponse {
  string report_id = 1;
  string error = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}
